Thu Jun  6 00:04:38 1996  Theodore Y. Ts'o  <tytso@mit.edu>

	* Makefile.in (all-windows): Don't pass $(LIBCMD) on the command
		line.  It's set in the windows.in prologue for all Makefiles anyway.

Wed Feb  7 00:23:18 1996  Theodore Y. Ts'o  <tytso@dcl>

	* Makefile.in: Folded in danw's changes to allow
		building Makefiles for the Macintosh.  We now can build
		MPW makefiles which are interpreted by CodeWarrior.

Wed Dec 13 07:09:30 1995  Chris Provenzano (proven@mit.edu)

        * configure.in : Remove subdirectory db. 

Tue Dec 12 01:26:30 1995  Chris Provenzano (proven@mit.edu)

	* configure.in : Added subdirectory db.

Fri Oct  6 22:04:28 1995  Theodore Y. Ts'o  <tytso@dcl>

	* Makefile.in: Remove ##DOS!include of config/windows.in.
		config/windows.in is now included by wconfig.

Mon Sep 25 16:57:28 1995  Theodore Y. Ts'o  <tytso@dcl>

	* Makefile.in: Removed "foo:: foo-$(WHAT)" lines from the
		Makefile. 

Wed Sep 06 14:20:57 1995   Chris Provenzano (proven@mit.edu)

        * read_servi.c : s/keytype/enctype/g, s/KEYTYPE/ENCTYPE/g

Tue Aug 29 13:37:56 EDT 1995	Paul Park	(pjpark@mit.edu)
	* ktbase.c - Add routines to deal with externalizing krb5_keytab.  These
		search the registered keytab types for a match and dispatch
		via the serializer handle.

Fri Aug  4 21:48:41 1995  Tom Yu  <tlyu@dragons-lair.MIT.EDU>

	* read_servi.c (krb5_kt_read_service_key): add more parens to shut
		up gcc -Wall

	* ktdefault.c (krb5_kt_default): add more parens to shut up gcc
		-Wall

Fri Jun  9 19:33:33 1995    <tytso@rsx-11.mit.edu>

	* configure.in: Remove standardized set of autoconf macros, which
		are now handled by CONFIG_RULES.  Use DO_SUBDIRS to
		recurse down subdirectories.

Fri May 26 20:20:18 1995  Theodore Y. Ts'o  (tytso@dcl)

	* configure.in, Makefile.in: Add support for building shared libraries.

Thu Apr 13 15:49:16 1995 Keith Vetter (keithv@fusion.com)

	* *.c: removed unneeded INTERFACE from non-api functions.
