@@ -27,10 +27,10 @@
 #include "k5-int.h"
 #include <stdio.h>
 
-krb5_error_code
+KRB5_DLLIMP krb5_error_code KRB5_CALLCONV
 krb5_kt_default(context, id)
     krb5_context context;
-    krb5_keytab *id;
+    krb5_keytab FAR *id;
 {
     char defname[BUFSIZ];
     krb5_error_code retval;
