@@ -26,10 +26,10 @@
 
 #include "k5-int.h"
 
-krb5_error_code
+KRB5_DLLIMP krb5_error_code KRB5_CALLCONV
 krb5_kt_free_entry (context, entry)
     krb5_context context;
-    krb5_keytab_entry *entry;
+    krb5_keytab_entry FAR *entry;
 {
     if (!entry)
 	return 0;
